# ai

./: .dockerignore  .env.example  .eslintrc  .gitignore  Dockerfile  README.md  Vera_Knowledge_Base_for_Galtea_Testing.txt  alembic.ini  docker-compose.yml  finance_agent_migration_plan.md  finance_procedural_templates.jsonl  pr_review_redis_checkpointer.md  pyproject.toml  run.py  supervisor_prompts_inventory.json  supervisor_routing_examples.jsonl  supervisor_routing_goal_financial_examples.jsonl  test_episodic_memories.jsonl  test_semantic_memories.jsonl
.cursor/commands/: code-review.md
.cursor/rules/: 00-project-structure.mdc  10-finance-agent-guidelines.mdc  20-handoff-tools.mdc  adding-prompts-to-system.mdc  code-quality-best-practices.mdc  configuration-architecture.mdc  custom-events.mdc  dependency-injection-singleton.mdc  finance-agent-guidelines.mdc  never-run-enviroment.mdc  plan-and-modify.mdc  project-structure.mdc  prompt-testing-system.mdc  pythonic-standard-library-usage.mdc  ruff-linting.mdc  supervisor-summarization-system.mdc  system-pipeline-architecture.mdc
.github/: copilot-instructions.md
.github/workflows/: BuildAndDeployDev.yml  buildAndDeploy.yml  check_ruff.yml  check_secrets.yml  deploy-uat.yml  deploy.yml  main.yml  release.yml  test.yml  validate-branch-name.yml  validate-pr-to-main.yml
TODOs/: memory.md
alembic/: env.py  script.py.mako
alembic/versions/: d4ca20474b23_add_user_context.py
app/: envs.py  main.py
app/agents/: __init__.py
app/agents/guest/: __init__.py  agent.py  prompts.py
app/agents/onboarding/: __init__.py  agent.py  constants.py  events.py  flow_definitions.py  formatter.py  prompts.py  state.py  topic_detection.py  types.py
app/agents/supervisor/: __init__.py  agent.py  blocked_topics.json  fast_response_agent.py  handoff.py  i18n.py  intent_classifier.py  memory_nodes.py  memory_stub.py  memory_tools.py  prompts.py  subgraph.py  summarizer.py  tools.py  workers.py
app/api/: routes.py  routes_admin.py  routes_audio.py  routes_crawl.py  routes_cron.py  routes_feedback.py  routes_guest.py  routes_internal_webhooks.py  routes_knowledge.py  routes_nudge_eval.py  routes_nudges.py  routes_prompts.py  routes_stt.py  routes_supervisor.py  routes_test.py  routes_tittle_gen.py  routes_tts.py
app/api/admin/: memories.py  sources.py
app/api/schemas/: cron.py  knowledge.py  test_schemas.py  title_gen.py
app/core/: app_state.py  aws_config.py  config.py
app/db/: __init__.py  session.py
app/db/models/: __init__.py  nudge.py  user.py
app/knowledge/: KB_README.md  config.py  constants.py  crawl_logger.py  document_service.py  internal_sections.py  log.txt  models.py  orchestrator.py  repository.py  s3_sync_service.py  service.py  sources.json  sync_service.py  unified_sync_service.py  utils.py
app/knowledge/crawler/: content_utils.py  loaders.py  service.py
app/knowledge/management/: sync_manager.py
app/knowledge/sources/: base_repository.py  repository.py  service.py  sources.json
app/knowledge/sync/: service.py
app/knowledge/utils/: utils_hash.py
app/knowledge/vector_store/: service.py
app/models/: __init__.py  memory.py  nudge.py  user.py
app/observability/: logging_config.py
app/repositories/: __init__.py  database_service.py  s3_vectors_store.py  session_store.py
app/repositories/interfaces/: __init__.py  nudge_repository.py  user_repository.py
app/scripts/: README.md  dump_memories.py  test_goal_nudge_strategy.py  test_goals_service.py  test_trigger_endpoint.py
app/services/: audio_service.py  blocked_topics.json  feedback.py  memory_consolidation_service.py  memory_service.py  supervisor.py  supervisor_service.py  user_context_cache.py  utils.py
app/utils/: mapping.py  tools.py  welcome.py
docs/: GOAL_PROGRESS_HISTORY_INTERNAL_API.md  Profile.md  admin-cost-api-README.md  perf_scaling_plan.md  vera_architecture_overview_narrative.md  vera_investor_overview.md  vp-49-voice-mode.md
docs/agent-integration/: agent-integration-guide.md
docs/architecture/: 04_S3_Vectors_Memory_Plan.md  06_Omnichannel_Integration_Layer.md  08_Onboarding_Graph_Quickstart.md  09_Semantic_vs_Episodic_Refactor_Plan.md  finance_capture_agent_plan.md
docs/features-and-prompts/: nudges.md  sample-qa.md  thinking-timeline-dictionary.md
docs/implemented_architecture/: Data_Stores_and_Lifecycle.md
docs/planed_architecture/: 01_C4_Model_and_System_Diagram.md  02_Agent_Core_Engine.md  03_Memory_System.md  04_S3_Vectors_Memory_Plan.md  05_Backend_Services_and_Tools.md  07_Data_and_Persistence_Layer.md  10_Deepagents_Blackboard_And_Parallelism.md  Nudge_System_Implementation.md  README.md
docs/profile-and-info/: memories.md  profile.md
docs/profile-and-memories/: memories.md  profile.md
knowledge/: KB_README.md  document_service.py  models.py  repository.py  service.py  source_service.py  sources.json
knowledge/crawler/: loaders.py  service.py
knowledge/vector_store/: service.py
release/scripts/: version_bump.py
src/verde_ai_core/: __init__.py
streamlit_supervisor_test/: README.md  app.py  benchmark_prompts.json  requirements.txt
tests/: ARCHITECTURE.md  __init__.py  conftest.py
tests/api/: conftest.py  test_routes.py  test_routes_admin.py  test_routes_crawl.py  test_routes_cron.py  test_routes_guest.py  test_routes_knowledge.py  test_routes_knowledge_sync.py  test_routes_nudge_eval.py  test_routes_stt.py  test_routes_supervisor.py  test_routes_title_gen.py  test_routes_tts.py
tests/knowledge/: conftest.py  test_crawl_logger.py  test_crawler_service.py  test_document_service.py  test_knowledge_service.py  test_models.py  test_s3_sync_service.py  test_source_repository.py  test_subcategory_utils.py  test_sync_service.py  test_sync_utils.py
tests/summarizer/: README.md  __init__.py  run_summarizer_tests.bat  run_summarizer_tests.ps1  test_conversation_summarizer.py
tests/supervisor_prompts/: README.md  loader.py  plan.md  prompt_specs.json
tests/unit/: test_database_nudge_manager.py  test_fos_nudge_manager.py  test_import_resolution.py  test_main.py  test_nudge_models.py
(+369 files in other folders)
