[tool.poetry]
name = "verde-ai-core"
version = "0.1.0"
description = "AI Agents for Verde Money Vera app"
authors = [
    "Thomas <thomas.wallace@promtior.ai>",
    "Sofi <sofia.duclos@promtior.ai>",
    "Joaquin <joaquin.bonifacino@promtior.ai>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
redis = "^5.0.7"
pydantic = "^2.0.0"
python-dotenv = "^1.0.1"
boto3 = "^1.34.150"
langfuse = "^3.8.1"
beautifulsoup4 = "^4.13.4"
SQLAlchemy = "2.0.43"
asyncpg = "0.30.0"
alembic = "1.16.4"
lxml = "^6.0.0"
httpx = "^0.27.0"
streamlit = "^1.49.1"
sseclient = "^0.0.27"
playwright = "^1.55.0"
pypdf = "^6.0.0"
python-multipart = "^0.0.20"
langchain = "^1.1.0"
langgraph = "^1.0.4"
langchain-aws = "^1.1.0"
langchain-community = "^0.4.1"
langchain-cerebras = "^0.8.2"
langchain-text-splitters = "^1.0.0"
langmem = "^0.0.30"
langchain-classic = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^5.13.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"
opentelemetry-exporter-otlp-proto-http = "^1.37.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
        "alembic/versions",
]

# Same as Black.
line-length = 120
indent-width = 4

# Align to Python 3.12+
target-version = "py312"

[tool.ruff.lint]
# Enable rules
select = [
    "E",
    "F",
    "I",
    "W",
    "B",
    "D",
    "SIM",
    "TID",
]
ignore = [
    "ANN401",
    "UP038",
    "D203",
    "D213",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "UP045",
    "E501",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Enable additional rules
extend-select = ["I"]  # isort

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*" = ["S101", "D"]  # Allow assert statements and missing docstrings in tests
"app/main.py" = ["E402"]  # Allow imports after dotenv load in FastAPI entry

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
markers = [
    "asyncio: marks tests as async",
    "prompt_static: marks prompt static quality tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 